# Terrafrom-Drift-Detector

./: README.md  pyproject.toml
examples/: azure-resources.json  terraform.tfstate
terraform_drift_detector/: __init__.py  cli.py  comparator.py  dashboard.py  models.py  normalizers.py  providers.py  scanner.py  state_parser.py  storage.py
tests/: test_comparator.py  test_state_parser.py
