[project]
name = "terraform-drift-detector"
version = "0.1.0"
description = "Azure-first Terraform state drift detection without Terraform plan/apply."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]
azure = [
  "azure-identity>=1.16.0",
  "azure-mgmt-resource>=23.1.1",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
driftdetect = "terraform_drift_detector.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["terraform_drift_detector*"]
